@@ -10,6 +10,7 @@ package org.sosy_lab.cpachecker.cpa.invariants;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
+import com.google.common.collect.ObjectArrays;
 import com.google.common.math.IntMath;
 import java.math.BigInteger;
 import java.util.ArrayList;
@@ -25,7 +26,7 @@ import org.sosy_lab.cpachecker.cpa.invariants.operators.mathematical.ISCOperator
 
 /** Instances of this class represent compound states of intervals. */
 @SuppressWarnings("AmbiguousMethodReference")
-public class CompoundMathematicalInterval implements CompoundIntegralInterval {
+public final class CompoundMathematicalInterval implements CompoundIntegralInterval {
 
   private static final CompoundMathematicalInterval ZERO =
       new CompoundMathematicalInterval(SimpleInterval.singleton(BigInteger.ZERO));
@@ -243,7 +244,7 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
     }
     if (!inserted) {
       if (pOther.touches(lastInterval)) {
-        resultIntervals.remove(resultIntervals.size() - 1);
+        resultIntervals.removeLast();
         lastInterval = union(pOther, lastInterval);
         resultIntervals.add(lastInterval);
       } else {
@@ -538,7 +539,7 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
   /**
    * Checks if there is a lower bound to this compound state.
    *
-   * @return <code>true</code> if there is an lower bound to this compound state, <code>false</code>
+   * @return <code>true</code> if there is a lower bound to this compound state, <code>false</code>
    *     otherwise.
    */
   @Override
@@ -625,8 +626,8 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
     if (this == pOther) {
       return true;
     }
-    return pOther instanceof CompoundMathematicalInterval
-        && Arrays.equals(intervals, ((CompoundMathematicalInterval) pOther).intervals);
+    return pOther instanceof CompoundMathematicalInterval other
+        && Arrays.equals(intervals, other.intervals);
   }
 
   @Override
@@ -705,9 +706,8 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
       }
     }
     if (currentLowerBound != null) {
-      SimpleInterval[] resultIntervals = new SimpleInterval[result.intervals.length + 1];
-      System.arraycopy(result.intervals, 0, resultIntervals, 0, result.intervals.length);
-      resultIntervals[result.intervals.length] = createSimpleInterval(currentLowerBound, null);
+      SimpleInterval[] resultIntervals =
+          ObjectArrays.concat(result.intervals, createSimpleInterval(currentLowerBound, null));
       result = getInternal(resultIntervals);
     }
     return result;
@@ -792,9 +792,8 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
     if (!hasLowerBound()) {
       return this;
     }
-    SimpleInterval[] resultIntervals = new SimpleInterval[intervals.length];
-    resultIntervals[0] = intervals[0].extendToNegativeInfinity();
-    System.arraycopy(intervals, 1, resultIntervals, 1, intervals.length - 1);
+    SimpleInterval[] resultIntervals = intervals.clone();
+    resultIntervals[0] = resultIntervals[0].extendToNegativeInfinity();
     return getInternal(resultIntervals);
   }
 
@@ -810,10 +809,9 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
     if (!hasUpperBound()) {
       return this;
     }
-    SimpleInterval[] resultIntervals = new SimpleInterval[intervals.length];
+    SimpleInterval[] resultIntervals = intervals.clone();
     int index = intervals.length - 1;
-    System.arraycopy(intervals, 0, resultIntervals, 0, index);
-    resultIntervals[index] = intervals[index].extendToPositiveInfinity();
+    resultIntervals[index] = resultIntervals[index].extendToPositiveInfinity();
     return getInternal(resultIntervals);
   }
 
@@ -1462,7 +1460,7 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
    * represents the false state while the other does not contain the false state, a state
    * representing true is returned. If either both of the states represent the false state or
    * neither of them represents false, a state representing false is returned. If one of the states
-   * is bottom, bottom is returned. Otherwise top is returned.
+   * is bottom, bottom is returned. Otherwise, top is returned.
    *
    * @param pState the state to XOR with this state.
    * @return a state representing true if either this state or the given state represents false
@@ -1513,7 +1511,7 @@ public class CompoundMathematicalInterval implements CompoundIntegralInterval {
    * the false state while the other does not contain the false state, a state representing true is
    * returned. If either both of the states represent the false state or neither of them represents
    * false, a state representing false is returned. If one of the states is bottom, bottom is
-   * returned. Otherwise top is returned.
+   * returned. Otherwise, top is returned.
    *
    * @param p1 one of the states to apply the exclusive or operation on.
    * @param p2 one of the states to apply the exclusive or operation on.
