@@ -26,6 +26,7 @@ import org.sosy_lab.cpachecker.cfa.types.c.CBasicType;
 import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cpa.smg.evaluator.SMGAbstractObjectAndState.SMGAddressValueAndState;
 import org.sosy_lab.cpachecker.cpa.smg.graphs.CLangSMG;
 import org.sosy_lab.cpachecker.cpa.smg.graphs.CLangSMGTest;
@@ -48,6 +49,7 @@ import org.sosy_lab.cpachecker.cpa.smg.graphs.value.SMGUnknownValue;
 import org.sosy_lab.cpachecker.cpa.smg.graphs.value.SMGValue;
 import org.sosy_lab.cpachecker.cpa.smg.graphs.value.SMGZeroValue;
 import org.sosy_lab.cpachecker.util.smg.datastructures.PersistentBiMap;
+import org.sosy_lab.cpachecker.util.test.TestUtils;
 
 public class SMGStateTest {
   private static final LogManager logger = LogManager.createTestLogManager();
@@ -60,8 +62,16 @@ public class SMGStateTest {
 
   private CSimpleType unspecifiedType =
       new CSimpleType(
-          false, false, CBasicType.UNSPECIFIED, false, false, true, false, false, false, false);
-  private CType pointerType = new CPointerType(false, false, unspecifiedType);
+          CTypeQualifiers.NONE,
+          CBasicType.UNSPECIFIED,
+          false,
+          false,
+          true,
+          false,
+          false,
+          false,
+          false);
+  private CType pointerType = new CPointerType(CTypeQualifiers.NONE, unspecifiedType);
   private static final MachineModel MM = MachineModel.LINUX32;
   private final long ptrSize = MM.getSizeofInBits(pointerType).longValueExact();
 
@@ -147,7 +157,7 @@ public class SMGStateTest {
     SMGState smg1State =
         new SMGState(
             logger,
-            new SMGOptions(Configuration.defaultConfiguration()),
+            new SMGOptions(TestUtils.configurationForTest().build()),
             smg1,
             0,
             PersistentBiMap.of());
@@ -263,7 +273,7 @@ public class SMGStateTest {
     SMGState smg1State =
         new SMGState(
             logger,
-            new SMGOptions(Configuration.defaultConfiguration()),
+            new SMGOptions(TestUtils.configurationForTest().build()),
             heap,
             0,
             PersistentBiMap.of());
@@ -281,7 +291,7 @@ public class SMGStateTest {
 
     add.get(1).getSmgState().performConsistencyCheck(SMGRuntimeCheck.NONE);
 
-    add.get(0).getSmgState().performConsistencyCheck(SMGRuntimeCheck.NONE);
+    add.getFirst().getSmgState().performConsistencyCheck(SMGRuntimeCheck.NONE);
 
     UnmodifiableSMGState newState = add.get(1).getSmgState();
 
@@ -289,7 +299,7 @@ public class SMGStateTest {
 
     add2.get(1).getSmgState().performConsistencyCheck(SMGRuntimeCheck.NONE);
 
-    add2.get(0).getSmgState().performConsistencyCheck(SMGRuntimeCheck.NONE);
+    add2.getFirst().getSmgState().performConsistencyCheck(SMGRuntimeCheck.NONE);
   }
 
   @Test
@@ -327,7 +337,7 @@ public class SMGStateTest {
     SMGEdgeHasValue nextField = new SMGEdgeHasValue(sizeInBits, nfo, dll, SMGZeroValue.INSTANCE);
     heap.addHasValueEdge(nextField);
 
-    SMGOptions options = new SMGOptions(Configuration.defaultConfiguration());
+    SMGOptions options = new SMGOptions(TestUtils.configurationForTest().build());
     SMGState smg1State = new SMGState(logger, options, heap, 0, PersistentBiMap.of());
 
     smg1State.addStackFrame(CLangSMGTest.DUMMY_FUNCTION);
@@ -338,7 +348,7 @@ public class SMGStateTest {
     List<SMGAddressValueAndState> valAndStates1 = smg1State.getPointerFromValue(value6);
 
     assertThat(valAndStates1).hasSize(1);
-    SMGState newState = valAndStates1.get(0).getSmgState();
+    SMGState newState = valAndStates1.getFirst().getSmgState();
     newState.pruneUnreachable();
     newState.performConsistencyCheck(SMGRuntimeCheck.FORCED);
 
@@ -402,7 +412,7 @@ public class SMGStateTest {
         new SMGEdgeHasValue(sizeInBits, hfo, sll, SMGZeroValue.INSTANCE);
     heap.addHasValueEdge(initialDataField);
 
-    SMGOptions options = new SMGOptions(Configuration.defaultConfiguration());
+    SMGOptions options = new SMGOptions(TestUtils.configurationForTest().build());
     SMGState smg1State = new SMGState(logger, options, heap, 0, PersistentBiMap.of());
 
     smg1State.addStackFrame(CLangSMGTest.DUMMY_FUNCTION);
@@ -414,7 +424,7 @@ public class SMGStateTest {
     List<SMGAddressValueAndState> valAndStates1 = smg1State.getPointerFromValue(value6);
 
     assertThat(valAndStates1).hasSize(1);
-    SMGState newState = valAndStates1.get(0).getSmgState();
+    SMGState newState = valAndStates1.getFirst().getSmgState();
     newState.pruneUnreachable();
     newState.performConsistencyCheck(SMGRuntimeCheck.FORCED);
 
@@ -460,7 +470,7 @@ public class SMGStateTest {
   @Before
   public void setUp() throws SMGInconsistentException, InvalidConfigurationException {
 
-    ConfigurationBuilder builder = Configuration.builder();
+    ConfigurationBuilder builder = TestUtils.configurationForTest();
     builder.setOption("cpa.smg.runtimeCheck", "HALF");
     Configuration config = builder.build();
 
@@ -531,7 +541,7 @@ public class SMGStateTest {
   public void PredecessorsTest() throws InvalidConfigurationException {
     UnmodifiableSMGState original =
         new SMGState(
-            logger, MachineModel.LINUX64, new SMGOptions(Configuration.defaultConfiguration()));
+            logger, MachineModel.LINUX64, new SMGOptions(TestUtils.configurationForTest().build()));
     UnmodifiableSMGState second = original.copyOf();
     assertThat(second.getId()).isNotEqualTo(original.getId());
 
@@ -549,10 +559,10 @@ public class SMGStateTest {
     // Empty state
     SMGState state =
         new SMGState(
-            logger, MachineModel.LINUX64, new SMGOptions(Configuration.defaultConfiguration()));
+            logger, MachineModel.LINUX64, new SMGOptions(TestUtils.configurationForTest().build()));
     state.performConsistencyCheck(SMGRuntimeCheck.FORCED);
 
-    // Add an 16b object and write a 16b value into it
+    // Add a 16b object and write a 16b value into it
     SMGEdgePointsTo pt = state.addNewHeapAllocation(16, "OBJECT");
     SMGKnownSymbolicValue new_value = SMGKnownSymValue.of();
     SMGEdgeHasValue hv = state.writeValue(pt.getObject(), 0, mockSize16b, new_value).getNewEdge();
@@ -616,10 +626,10 @@ public class SMGStateTest {
     // Empty state
     SMGState state =
         new SMGState(
-            logger, MachineModel.LINUX64, new SMGOptions(Configuration.defaultConfiguration()));
+            logger, MachineModel.LINUX64, new SMGOptions(TestUtils.configurationForTest().build()));
     state.performConsistencyCheck(SMGRuntimeCheck.FORCED);
 
-    // Add an 16b object and write a 16b zero value into it
+    // Add a 16b object and write a 16b zero value into it
     SMGEdgePointsTo pt = state.addNewHeapAllocation(16, "OBJECT");
     SMGEdgeHasValue hv =
         state.writeValue(pt.getObject(), 0, mockSize16b, SMGZeroValue.INSTANCE).getNewEdge();
@@ -661,7 +671,7 @@ public class SMGStateTest {
     // Empty state
     SMGState state =
         new SMGState(
-            logger, MachineModel.LINUX64, new SMGOptions(Configuration.defaultConfiguration()));
+            logger, MachineModel.LINUX64, new SMGOptions(TestUtils.configurationForTest().build()));
     state.performConsistencyCheck(SMGRuntimeCheck.FORCED);
 
     SMGEdgePointsTo pt = state.addNewHeapAllocation(16, "OBJECT");
@@ -676,7 +686,7 @@ public class SMGStateTest {
       throws SMGInconsistentException, InvalidConfigurationException {
     SMGState state =
         new SMGState(
-            logger, MachineModel.LINUX64, new SMGOptions(Configuration.defaultConfiguration()));
+            logger, MachineModel.LINUX64, new SMGOptions(TestUtils.configurationForTest().build()));
     state.performConsistencyCheck(SMGRuntimeCheck.FORCED);
 
     SMGEdgePointsTo pt = state.addNewHeapAllocation(16, "OBJECT");
@@ -690,7 +700,7 @@ public class SMGStateTest {
   public void SMGStateMemoryLeaksTest() throws InvalidConfigurationException {
     SMGState state =
         new SMGState(
-            logger, MachineModel.LINUX64, new SMGOptions(Configuration.defaultConfiguration()));
+            logger, MachineModel.LINUX64, new SMGOptions(TestUtils.configurationForTest().build()));
 
     assertThat(state.hasMemoryLeaks()).isFalse();
     state.setMemLeak("", ImmutableList.of());
