@@ -8,11 +8,11 @@
 
 package org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing;
 
+import static com.google.common.collect.FluentIterable.from;
 import static org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CTypeUtils.checkIsSimplified;
 
-import com.google.common.collect.ImmutableSortedSet;
 import java.math.BigInteger;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -39,6 +39,7 @@ import org.sosy_lab.cpachecker.cfa.types.c.CCompositeType.CCompositeTypeMemberDe
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cfa.types.c.CVoidType;
 import org.sosy_lab.cpachecker.cpa.value.AbstractExpressionValueVisitor;
 import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
@@ -60,7 +61,7 @@ import org.sosy_lab.java_smt.api.Formula;
  * malloc() and free(), and for handling deferred allocations (calls to malloc() where the assumed
  * type of the memory is not yet known).
  */
-class DynamicMemoryHandler {
+public final class DynamicMemoryHandler {
 
   private static final String CALLOC_FUNCTION = "calloc";
 
@@ -122,15 +123,8 @@ class DynamicMemoryHandler {
       final CExpressionVisitorWithPointerAliasing expressionVisitor)
       throws UnrecognizedCodeException, InterruptedException {
 
-    if ((conv.options.isSuccessfulAllocFunctionName(functionName)
-        || conv.options.isSuccessfulZallocFunctionName(functionName))) {
-      return Value.ofValue(
-          handleSuccessfulMemoryAllocation(functionName, e.getParameterExpressions(), e));
-
-    } else if ((conv.options.isMemoryAllocationFunction(functionName)
-        || conv.options.isMemoryAllocationFunctionWithZeroing(functionName))) {
+    if (conv.options.isMemoryAllocationFunction(functionName)) {
       return Value.ofValue(handleMemoryAllocation(e, functionName));
-
     } else if (conv.options.isMemoryFreeFunction(functionName)) {
       return handleMemoryFree(e, expressionVisitor);
     } else if (conv.options.isMemoryReallocFunction(functionName)) {
@@ -141,8 +135,8 @@ class DynamicMemoryHandler {
   }
 
   /**
-   * Handle memory allocation functions that may fail (i.e., return null) and that may or may not
-   * zero the memory.
+   * Handle memory allocation functions, which may or may not fail (i.e., return nulland which may
+   * or may not zero the memory.
    *
    * @param e The function call expression.
    * @param functionName The name of the allocation function.
@@ -152,47 +146,15 @@ class DynamicMemoryHandler {
    */
   private Formula handleMemoryAllocation(final CFunctionCallExpression e, final String functionName)
       throws UnrecognizedCodeException, InterruptedException {
-    final boolean isZeroing = conv.options.isMemoryAllocationFunctionWithZeroing(functionName);
     List<CExpression> parameters = e.getParameterExpressions();
 
+    final CExpression allocationSize;
     if (functionName.equals(CALLOC_FUNCTION) && parameters.size() == 2) {
-      CExpression param0 = parameters.get(0);
-      CExpression param1 = parameters.get(1);
+      allocationSize = evaluateCallocParameters(parameters.getFirst(), parameters.getLast());
 
-      // Build expression for param0 * param1 as new parameter.
-      CBinaryExpressionBuilder builder =
-          new CBinaryExpressionBuilder(conv.machineModel, conv.logger);
-      CBinaryExpression multiplication =
-          builder.buildBinaryExpression(param0, param1, BinaryOperator.MULTIPLY);
-
-      // Try to evaluate the multiplication if possible.
-      Long value0 = tryEvaluateExpression(param0);
-      Long value1 = tryEvaluateExpression(param1);
-      if (value0 != null && value1 != null) {
-        long result =
-            AbstractExpressionValueVisitor.calculateBinaryOperation(
-                    new NumericValue(value0),
-                    new NumericValue(value1),
-                    multiplication,
-                    conv.machineModel,
-                    conv.logger)
-                .asLong(multiplication.getExpressionType());
-
-        CExpression newParam =
-            new CIntegerLiteralExpression(
-                param0.getFileLocation(),
-                multiplication.getExpressionType(),
-                BigInteger.valueOf(result));
-        parameters = Collections.singletonList(newParam);
-
-      } else {
-        parameters = Collections.singletonList(multiplication);
-      }
-
-    } else if (parameters.size() != 1) {
-      if (parameters.size() > 1 && conv.options.hasSuperfluousParameters(functionName)) {
-        parameters = Collections.singletonList(parameters.get(0));
-      } else {
+    } else {
+      if (parameters.size() < 1
+          || (parameters.size() > 1 && !conv.options.hasSuperfluousParameters(functionName))) {
         throw new UnrecognizedCodeException(
             String.format(
                 "Memory allocation function %s() called with %d parameters instead of 1",
@@ -200,22 +162,27 @@ class DynamicMemoryHandler {
             edge,
             e);
       }
+      allocationSize = parameters.getFirst();
     }
 
     final String delegateFunctionName =
-        !isZeroing
-            ? conv.options.getSuccessfulAllocFunctionName()
-            : conv.options.getSuccessfulZallocFunctionName();
+        conv.options.isMemoryAllocationFunctionWithZeroing(functionName)
+            ? conv.options.getSuccessfulZallocFunctionName()
+            : conv.options.getSuccessfulAllocFunctionName();
 
-    if (!conv.options.makeMemoryAllocationsAlwaysSucceed()) {
+    Formula successfulAllocation =
+        handleSuccessfulMemoryAllocation(delegateFunctionName, allocationSize, e);
+
+    if (conv.options.memoryAllocationFunctionSucceeds(functionName)) {
+      return successfulAllocation;
+
+    } else {
       final Formula nondet =
           conv.makeFreshVariable(functionName, CPointerType.POINTER_TO_VOID, ssa);
       return conv.bfmgr.ifThenElse(
           conv.bfmgr.not(conv.fmgr.makeEqual(nondet, conv.nullPointer)),
-          handleSuccessfulMemoryAllocation(delegateFunctionName, parameters, e),
+          successfulAllocation,
           conv.nullPointer);
-    } else {
-      return handleSuccessfulMemoryAllocation(delegateFunctionName, parameters, e);
     }
   }
 
@@ -224,31 +191,18 @@ class DynamicMemoryHandler {
    * the memory.
    *
    * @param functionName The name of the memory allocation function.
-   * @param parameters The list of function parameters.
+   * @param parameter The one parameter with the allocation size.
    * @param e The function call expression.
    * @return A formula for the function call.
    * @throws UnrecognizedCodeException If the C code was unrecognizable.
    * @throws InterruptedException If the execution was interrupted.
    */
   private Formula handleSuccessfulMemoryAllocation(
-      final String functionName, List<CExpression> parameters, final CFunctionCallExpression e)
+      final String functionName, final CExpression parameter, final CFunctionCallExpression e)
       throws UnrecognizedCodeException, InterruptedException {
     // e.getFunctionNameExpression() should not be used
     // as it might refer to another function if this method is called from handleMemoryAllocation()
-    if (parameters.size() != 1) {
-      if (parameters.size() > 1 && conv.options.hasSuperfluousParameters(functionName)) {
-        parameters = Collections.singletonList(parameters.get(0));
-      } else {
-        throw new UnrecognizedCodeException(
-            String.format(
-                "Memory allocation function %s() called with %d parameters instead of 1",
-                functionName, parameters.size()),
-            edge,
-            e);
-      }
-    }
 
-    final CExpression parameter = parameters.get(0);
     Long size = null;
     final CType newType;
     if (isSizeof(parameter)) {
@@ -258,9 +212,9 @@ class DynamicMemoryHandler {
       final CType operand1Type = getSizeofType(product.getOperand1());
       final CType operand2Type = getSizeofType(product.getOperand2());
       if (operand1Type != null) {
-        newType = new CArrayType(false, false, operand1Type, product.getOperand2());
+        newType = new CArrayType(CTypeQualifiers.NONE, operand1Type, product.getOperand2());
       } else if (operand2Type != null) {
-        newType = new CArrayType(false, false, operand2Type, product.getOperand1());
+        newType = new CArrayType(CTypeQualifiers.NONE, operand2Type, product.getOperand1());
       } else {
         throw new UnrecognizedCodeException(
             "Can't determine type for internal memory allocation", edge, e);
@@ -279,7 +233,7 @@ class DynamicMemoryHandler {
         } else {
           length = parameter;
         }
-        newType = new CArrayType(false, false, CVoidType.VOID, length);
+        newType = new CArrayType(CTypeQualifiers.NONE, CVoidType.VOID, length);
       } else {
         newType = null;
       }
@@ -300,20 +254,19 @@ class DynamicMemoryHandler {
             edge);
     Formula address;
     if (newType != null) {
-      final String newBase =
-          makeAllocVariableName(functionName, newType, pts.getFreshAllocationId());
+      final PointerBase newBase = makeAllocBase(functionName, newType, pts.getFreshAllocationId());
       address =
           makeAllocation(
-              conv.options.isSuccessfulZallocFunctionName(functionName),
+              conv.options.getSuccessfulZallocFunctionName().equals(functionName),
               newType,
               newBase,
               Optional.of(sizeExp));
     } else {
-      final String newBase =
-          makeAllocVariableName(functionName, CVoidType.VOID, pts.getFreshAllocationId());
+      final PointerBase newBase =
+          makeAllocBase(functionName, CVoidType.VOID, pts.getFreshAllocationId());
       pts.addNextBaseAddressConstraints(newBase, null, sizeExp, true, constraints);
       pts.addTemporaryDeferredAllocation(
-          conv.options.isSuccessfulZallocFunctionName(functionName),
+          conv.options.getSuccessfulZallocFunctionName().equals(functionName),
           Optional.ofNullable(size)
               .map(
                   s ->
@@ -322,8 +275,7 @@ class DynamicMemoryHandler {
                           parameter.getExpressionType(),
                           BigInteger.valueOf(s))),
           newBase);
-      address =
-          conv.makeConstant(PointerTargetSet.getBaseName(newBase), CPointerType.POINTER_TO_VOID);
+      address = conv.makeConstant(newBase.formulaEncoding(), CPointerType.POINTER_TO_VOID);
       constraints.addConstraint(
           conv.fmgr.makeGreaterThan(
               address, conv.fmgr.makeNumber(typeHandler.getPointerType(), 0L), true));
@@ -334,6 +286,40 @@ class DynamicMemoryHandler {
       constraints.addConstraint(conv.fmgr.makeEqual(conv.makeBaseAddressOfTerm(address), address));
     }
     return address;
+  }
+
+  /**
+   * Convert the two parameters of a "calloc" call into a single expression by multiplying them, if
+   * possible concretely, else symbolically.
+   */
+  private CExpression evaluateCallocParameters(CExpression param0, CExpression param1)
+      throws UnrecognizedCodeException {
+    // Build expression for param0 * param1 as new parameter.
+    CBinaryExpressionBuilder builder = new CBinaryExpressionBuilder(conv.machineModel, conv.logger);
+    CBinaryExpression multiplication =
+        builder.buildBinaryExpression(param0, param1, BinaryOperator.MULTIPLY);
+
+    // Try to evaluate the multiplication if possible.
+    Long value0 = tryEvaluateExpression(param0);
+    Long value1 = tryEvaluateExpression(param1);
+    if (value0 != null && value1 != null) {
+      long result =
+          ((NumericValue)
+                  AbstractExpressionValueVisitor.calculateBinaryOperation(
+                      new NumericValue(value0),
+                      new NumericValue(value1),
+                      multiplication,
+                      conv.machineModel,
+                      conv.logger))
+              .asLong(multiplication.getExpressionType())
+              .orElseThrow();
+
+      return new CIntegerLiteralExpression(
+          param0.getFileLocation(), multiplication.getExpressionType(), BigInteger.valueOf(result));
+
+    } else {
+      return multiplication;
+    }
   }
 
   /**
@@ -357,13 +343,12 @@ class DynamicMemoryHandler {
     if (errorConditions.isEnabled()) {
       final Formula operand =
           expressionVisitor.asValueFormula(
-              parameters.get(0).accept(expressionVisitor),
-              typeHandler.getSimplifiedType(parameters.get(0)));
+              parameters.getFirst().accept(expressionVisitor),
+              typeHandler.getSimplifiedType(parameters.getFirst()));
       BooleanFormula validFree = conv.fmgr.makeEqual(operand, conv.nullPointer);
 
-      for (String base : pts.getAllBases()) {
-        Formula baseF =
-            conv.makeBaseAddress(PointerTargetSet.getBaseName(base), CPointerType.POINTER_TO_VOID);
+      for (PointerBase base : pts.getAllBases()) {
+        Formula baseF = conv.makeBaseAddress(base, CPointerType.POINTER_TO_VOID);
         validFree = conv.bfmgr.or(validFree, conv.fmgr.makeEqual(operand, baseF));
       }
       errorConditions.addInvalidFreeCondition(conv.bfmgr.not(validFree));
@@ -377,7 +362,7 @@ class DynamicMemoryHandler {
    *
    * @param isZeroing A flag indicating if the variable is zeroing.
    * @param type The type.
-   * @param base The name of the base.
+   * @param base The base.
    * @param pSize An expression for the size in bytes of the new base. If absent, this was a
    *     previously deferred base.
    * @return A formula for the memory allocation.
@@ -385,7 +370,10 @@ class DynamicMemoryHandler {
    * @throws InterruptedException If the execution gets interrupted.
    */
   private Formula makeAllocation(
-      final boolean isZeroing, final CType type, final String base, final Optional<Formula> pSize)
+      final boolean isZeroing,
+      final CType type,
+      final PointerBase base,
+      final Optional<Formula> pSize)
       throws UnrecognizedCodeException, InterruptedException {
     final Formula result = conv.makeBaseAddress(base, type);
     if (isZeroing) {
@@ -404,7 +392,7 @@ class DynamicMemoryHandler {
               CNumericTypes.SIGNED_CHAR,
               AliasedLocation.ofAddress(result),
               Value.ofValue(
-                  conv.fmgr.makeNumber(conv.getFormulaTypeFromCType(CNumericTypes.SIGNED_CHAR), 0)),
+                  conv.fmgr.makeNumber(conv.getFormulaTypeFromType(CNumericTypes.SIGNED_CHAR), 0)),
               true,
               null,
               conv.bfmgr.makeTrue(),
@@ -435,35 +423,37 @@ class DynamicMemoryHandler {
           addAllFields(memberType);
         }
       }
-    } else if (type instanceof CArrayType) {
-      final CType elementType = checkIsSimplified(((CArrayType) type).getType());
+    } else if (type instanceof CArrayType cArrayType) {
+      final CType elementType = checkIsSimplified(cArrayType.getType());
       addAllFields(elementType);
     }
   }
 
   /**
-   * Creates a name for an allocation.
+   * Creates a base for an allocation.
    *
    * @param functionName The name of the function.
    * @param type The type of the function.
    * @param allocationId A unique ID for this allocation
    * @return A name for allocations.
    */
-  private String makeAllocVariableName(
+  private PointerBase makeAllocBase(
       final String functionName, final CType type, final int allocationId) {
-    return MALLOC_INDEX_SEPARATOR
-        + functionName
-        + "_"
-        + typeHandler.getPointerAccessNameForType(type)
-        + MALLOC_INDEX_SEPARATOR
-        + allocationId;
+    return new PointerBase(
+        MALLOC_INDEX_SEPARATOR
+            + functionName
+            + "_"
+            + typeHandler.getPointerAccessNameForType(type)
+            + MALLOC_INDEX_SEPARATOR
+            + allocationId);
   }
 
   /**
-   * Checks whether a given (non-empty) string is one that could be returned by {@link
-   * #makeAllocVariableName(String, CType, int)}.
+   * Checks whether a given base is one that could be returned by {@link #makeAllocBase(String,
+   * CType, int)}.
    */
-  static boolean isAllocVariableName(String name) {
+  public static boolean isAllocBase(PointerBase base) {
+    String name = base.name();
     // Check could be stricter, but should reliably distinguish everything returned from
     // makeAllocVariableName from other bases anyway.
     return name.charAt(0) == MALLOC_INDEX_SEPARATOR && name.lastIndexOf(MALLOC_INDEX_SEPARATOR) > 2;
@@ -476,23 +466,23 @@ class DynamicMemoryHandler {
    * @return The value, if the expression is an integer literal, or {@code null}
    */
   private static @Nullable Long tryEvaluateExpression(CExpression e) {
-    if (e instanceof CIntegerLiteralExpression) {
-      return ((CIntegerLiteralExpression) e).getValue().longValueExact();
+    if (e instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
+      return cIntegerLiteralExpression.getValue().longValueExact();
     }
     return null;
   }
 
   /**
-   * Returns, whether a expression is a {@code sizeof} expression.
+   * Returns, whether an expression is a {@code sizeof} expression.
    *
    * @param e The C expression.
    * @return True, if the expression is a {@code sizeof} expression, false otherwise.
    */
   private static boolean isSizeof(final CExpression e) {
-    return (e instanceof CUnaryExpression
-            && ((CUnaryExpression) e).getOperator() == UnaryOperator.SIZEOF)
-        || (e instanceof CTypeIdExpression
-            && ((CTypeIdExpression) e).getOperator() == TypeIdOperator.SIZEOF);
+    return (e instanceof CUnaryExpression cUnaryExpression
+            && cUnaryExpression.getOperator() == UnaryOperator.SIZEOF)
+        || (e instanceof CTypeIdExpression cTypeIdExpression
+            && cTypeIdExpression.getOperator() == TypeIdOperator.SIZEOF);
   }
 
   /**
@@ -503,10 +493,9 @@ class DynamicMemoryHandler {
    *     otherwise.
    */
   private static boolean isSizeofMultiple(final CExpression e) {
-    return e instanceof CBinaryExpression
-        && ((CBinaryExpression) e).getOperator() == BinaryOperator.MULTIPLY
-        && (isSizeof(((CBinaryExpression) e).getOperand1())
-            || isSizeof(((CBinaryExpression) e).getOperand2()));
+    return e instanceof CBinaryExpression cBinaryExpression
+        && cBinaryExpression.getOperator() == BinaryOperator.MULTIPLY
+        && (isSizeof(cBinaryExpression.getOperand1()) || isSizeof(cBinaryExpression.getOperand2()));
   }
 
   /**
@@ -516,12 +505,12 @@ class DynamicMemoryHandler {
    * @return The size of the expression.
    */
   private @Nullable CType getSizeofType(CExpression e) {
-    if (e instanceof CUnaryExpression
-        && ((CUnaryExpression) e).getOperator() == UnaryOperator.SIZEOF) {
-      return typeHandler.getSimplifiedType(((CUnaryExpression) e).getOperand());
-    } else if (e instanceof CTypeIdExpression
-        && ((CTypeIdExpression) e).getOperator() == TypeIdOperator.SIZEOF) {
-      return typeHandler.simplifyType(((CTypeIdExpression) e).getType());
+    if (e instanceof CUnaryExpression cUnaryExpression
+        && cUnaryExpression.getOperator() == UnaryOperator.SIZEOF) {
+      return typeHandler.getSimplifiedType(cUnaryExpression.getOperand());
+    } else if (e instanceof CTypeIdExpression cTypeIdExpression
+        && cTypeIdExpression.getOperator() == TypeIdOperator.SIZEOF) {
+      return typeHandler.simplifyType(cTypeIdExpression.getType());
     } else {
       return null;
     }
@@ -575,8 +564,7 @@ class DynamicMemoryHandler {
       }
 
       return new CArrayType(
-          false,
-          false,
+          CTypeQualifiers.NONE,
           type,
           new CIntegerLiteralExpression(
               sizeLiteral.getFileLocation(),
@@ -586,8 +574,8 @@ class DynamicMemoryHandler {
   }
 
   private static CType unwrapPointers(final CType type) {
-    if (type instanceof CPointerType) {
-      return unwrapPointers(((CPointerType) type).getType());
+    if (type instanceof CPointerType cPointerType) {
+      return unwrapPointers(cPointerType.getType());
     }
     return type;
   }
@@ -620,7 +608,7 @@ class DynamicMemoryHandler {
    * @throws UnrecognizedCodeException If the C code was unrecognizable.
    * @throws InterruptedException if the execution was interrupted.
    */
-  private void handleDeferredAllocationTypeRevelation(final String pointer, final CType type)
+  private void handleDeferredAllocationTypeRevelation(final PointerBase pointer, final CType type)
       throws UnrecognizedCodeException, InterruptedException {
     for (DeferredAllocation d : pts.removeDeferredAllocations(pointer)) {
       makeAllocation(
@@ -647,8 +635,8 @@ class DynamicMemoryHandler {
       final CRightHandSide rhs,
       final Expression rhsExpression,
       final CType lhsType,
-      final Map<String, CType> lhsLearnedPointerTypes,
-      final Map<String, CType> rhsLearnedPointerTypes)
+      final Map<PointerBase, CType> lhsLearnedPointerTypes,
+      final Map<PointerBase, CType> rhsLearnedPointerTypes)
       throws UnrecognizedCodeException, InterruptedException {
     // Handle allocations: reveal the actual type form the LHS type or defer the allocation until
     // later
@@ -665,9 +653,11 @@ class DynamicMemoryHandler {
       // allocation address)
       for (final String mangledVariable : rhsVariables) {
         final String nameWithoutIndex = FormulaManagerView.parseName(mangledVariable).getFirst();
-        if (PointerTargetSet.isBaseName(nameWithoutIndex)) {
+        final Optional<PointerBase> potentialBase =
+            PointerBase.fromFormulaEncoding(nameWithoutIndex);
+        if (potentialBase.isPresent()) {
           assert FormulaManagerView.parseName(mangledVariable).getSecond().isEmpty();
-          final String variable = PointerTargetSet.getBase(nameWithoutIndex);
+          final PointerBase variable = potentialBase.orElseThrow();
           if (pts.isTemporaryDeferredAllocationPointer(variable)) {
             if (!isAllocation) {
               if (CExpressionVisitorWithPointerAliasing.isRevealingType(lhsType)) {
@@ -675,7 +665,7 @@ class DynamicMemoryHandler {
                 handleDeferredAllocationTypeRevelation(variable, lhsType);
               } else {
                 // We can defer the allocation and start tracking the variable in the LHS
-                final Optional<String> lhsPointer =
+                final Optional<PointerBase> lhsPointer =
                     lhs.accept(new PointerApproximatingVisitor(typeHandler, edge));
                 lhsPointer.ifPresent(
                     s -> {
@@ -703,7 +693,7 @@ class DynamicMemoryHandler {
             }
           }
         } else {
-          assert !pts.isTemporaryDeferredAllocationPointer(mangledVariable);
+          assert !pts.isTemporaryDeferredAllocationPointer(new PointerBase(mangledVariable));
         }
       }
     }
@@ -731,8 +721,8 @@ class DynamicMemoryHandler {
       final CLeftHandSide lhs,
       final CRightHandSide rhs,
       final CType lhsType,
-      final Map<String, CType> lhsLearnedPointerTypes,
-      final Map<String, CType> rhsLearnedPointerTypes)
+      final Map<PointerBase, CType> lhsLearnedPointerTypes,
+      final Map<PointerBase, CType> rhsLearnedPointerTypes)
       throws UnrecognizedCodeException, InterruptedException {
     if (!(lhsType instanceof CPointerType || lhsType instanceof CArrayType)) {
       return;
@@ -762,16 +752,17 @@ class DynamicMemoryHandler {
         new PointerApproximatingVisitor(typeHandler, edge);
 
     // Reveal the type from usages (type casts, comparisons) in both sides
-    for (Map.Entry<String, CType> entry : lhsLearnedPointerTypes.entrySet()) {
+    for (Map.Entry<PointerBase, CType> entry : lhsLearnedPointerTypes.entrySet()) {
       handleDeferredAllocationTypeRevelation(entry.getKey(), entry.getValue());
     }
-    for (Map.Entry<String, CType> entry : rhsLearnedPointerTypes.entrySet()) {
+    for (Map.Entry<PointerBase, CType> entry : rhsLearnedPointerTypes.entrySet()) {
       handleDeferredAllocationTypeRevelation(entry.getKey(), entry.getValue());
     }
 
     // Reveal the type from the assignment itself (i.e. lhs from rhs and vice versa)
     if (toHandle.isPresent()) {
-      Optional<String> s = toHandle.orElseThrow().getFirst().accept(pointerApproximatingVisitor);
+      Optional<PointerBase> s =
+          toHandle.orElseThrow().getFirst().accept(pointerApproximatingVisitor);
       if (s.isPresent()
           && !lhsLearnedPointerTypes.containsKey(s.orElseThrow())
           && !rhsLearnedPointerTypes.containsKey(s.orElseThrow())) {
@@ -779,13 +770,13 @@ class DynamicMemoryHandler {
       }
     }
 
-    if (lhs instanceof CIdExpression) {
+    if (lhs instanceof CIdExpression cIdExpression) {
       // If LHS is a variable, remove previous points-to bindings containing it
-      pts.removeDeferredAllocationPointer(((CIdExpression) lhs).getDeclaration().getQualifiedName())
+      pts.removeDeferredAllocationPointer(new PointerBase(cIdExpression.getDeclaration()))
           .forEach(d -> handleDeferredAllocationPointerRemoval(lhs));
     } else {
       // Else try to remove bindings and only actually remove if no dangling objects arises
-      Optional<String> lhsPointer = lhs.accept(pointerApproximatingVisitor);
+      Optional<PointerBase> lhsPointer = lhs.accept(pointerApproximatingVisitor);
       if (lhsPointer.isPresent()
           && pts.canRemoveDeferredAllocationPointer(lhsPointer.orElseThrow())) {
         pts.removeDeferredAllocationPointer(lhsPointer.orElseThrow());
@@ -793,7 +784,7 @@ class DynamicMemoryHandler {
     }
 
     // And now propagate points-to bindings from the RHS to the LHS
-    Optional<String> l = lhs.accept(pointerApproximatingVisitor);
+    Optional<PointerBase> l = lhs.accept(pointerApproximatingVisitor);
     if (l.isPresent() && rhs != null) {
       rhs.accept(pointerApproximatingVisitor)
           .ifPresent(r -> pts.addDeferredAllocationPointer(l.orElseThrow(), r));
@@ -809,9 +800,9 @@ class DynamicMemoryHandler {
    * @throws InterruptedException If the execution gets interrupted.
    */
   void handleDeferredAllocationsInAssume(
-      final CExpression e, final Map<String, CType> learnedPointerTypes)
+      final CExpression e, final Map<PointerBase, CType> learnedPointerTypes)
       throws UnrecognizedCodeException, InterruptedException {
-    for (Map.Entry<String, CType> entry : learnedPointerTypes.entrySet()) {
+    for (Map.Entry<PointerBase, CType> entry : learnedPointerTypes.entrySet()) {
       handleDeferredAllocationTypeRevelation(entry.getKey(), entry.getValue());
     }
   }
@@ -840,8 +831,11 @@ class DynamicMemoryHandler {
   void handleDeferredAllocationInFunctionExit(final String function) {
     for (String v :
         CFAUtils.filterVariablesOfFunction(
-            ImmutableSortedSet.copyOf(pts.getDeferredAllocationPointers()), function)) {
-      if (!pts.removeDeferredAllocationPointer(v).isEmpty()) {
+            from(pts.getDeferredAllocationPointers())
+                .transform(PointerBase::name)
+                .toSortedSet(Comparator.naturalOrder()),
+            function)) {
+      if (!pts.removeDeferredAllocationPointer(new PointerBase(v)).isEmpty()) {
         conv.logger.logfOnce(
             Level.WARNING,
             "%s: Destroying the void* pointer %s produces garbage or the memory pointed by it is"
